mapgen/middleware-cors.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mapgen-cors
  namespace: mapgen
spec:
  headers:
    accessControlAllowOriginList:
      - "https://vault.jipwijnia.nl"
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - PATCH
      - DELETE
      - OPTIONS
    accessControlAllowHeaders:
      - Authorization
      - Content-Type
    accessControlAllowCredentials: true
    accessControlMaxAge: 3600
    addVaryHeader: true
