mapgen/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mapgen
  namespace: mapgen
spec:
  replicas: 5
  selector:
    matchLabels:
      app: mapgen
  template:
    metadata:
      labels:
        app: mapgen
    spec:
      containers:
        - name: frontend
          image: registry.services.atlantishq.de/atlantishq/mapgen-as-a-service-server-frontend:latest
          ports:
            - containerPort: 80

        - name: backend
          image: registry.services.atlantishq.de/atlantishq/mapgen-as-a-service-server:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1"
              memory: "512Mi"
