mapgen/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neroxis-mapgen-worker
  namespace: mapgen
spec:
  selector:
    matchLabels:
      app: neroxis-mapgen-worker
  template:
    metadata:
      labels:
        app: neroxis-mapgen-worker
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: location
                    operator: NotIn
                    values:
                      - ngb
      containers:
        - name: worker
          image: registry.services.atlantishq.de/atlantishq/neroxis-mapgen-worker:latest
          imagePullPolicy: Always
