mapgen/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mapgen
  namespace: mapgen
spec:
  selector:
    app: mapgen
  ports:
    - name: http
      port: 80
      targetPort: 80
