mapgen/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mapgen
  namespace: mapgen
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/redirect-entry-point: "https"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: >
      mapgen-oauth2-forward-auth-mapgen@kubernetescrd,
      mapgen-mapgen-cors@kubernetescrd
spec:
  rules:
    - host: mapgen.services.atlantishq.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mapgen
                port:
                  number: 80
  tls:
    - hosts:
        - mapgen.services.atlantishq.de
      secretName: mapgen-tls
